--- a/app/src/main/assets/editor.html
+++ b/app/src/main/assets/editor.html
@@ -10,6 +10,9 @@
 				width: 100%;
 				height: 100%;
 			}
+			img {
+				max-width: 100%;
+			}
 			#editor {
 				width: 100%;
 				height: 100%;
