--- a/app/src/main/assets/editor.html
+++ b/app/src/main/assets/editor.html
@@ -4,6 +4,9 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no">
 		<style>
+			*:focus {
+				outline: none;
+			}
 			html, body {
 				margin: 0;
 				padding: 0;
@@ -16,6 +19,7 @@
 			#editor {
 				width: 100%;
 				height: 100%;
+				overflow: auto;
 			}
 
 			font[size='1']{
